# bills

./: .gitignore  AGENT-INSTRUCTIONS.md  CHANGELOG.md  PROJECT_DESCRIPTION.md  PROJECT_SHELVING_NOTES.md  README.md  pyproject.toml  run_pipeline.sh  test_duckdb.py
agentdocs/: 01_PROJECT_OVERVIEW.md  02_PHASE_1_INGESTION.md  03_PHASE_2_ENRICHMENT.md  04_PHASE_3_THEMES.md  05_PHASE_4_SIGNALS.md  AGENT-INSTRUCTIONS.md  SESSION_HANDOFF.md
backend/app/core/: version.py
backend/models/: contracts.py
backend/scripts/: backtest.py  backtest_blend.py  backtest_threshold_sweep.py  enrich.py  ingest.py  report.py  signals.py  themes.py  validate.py
backend/scripts/utils/: estimate_pipeline.py  generate_psc_lookup.py  invalidate_stale_cage_failures.py  invalidate_stale_market_cap.py  invalidate_stale_resolutions.py  recover_cache.py  restore_cache.py  update_cage_cookies.py
backend/src/: analyze.py  backtest_engine.py  composite_signals.py  io.py  transform.py
backend/tests/integration/: test_pipeline.py  test_validation_pipeline.py
backend/tests/unit/: mock_transaction_types.csv  test_analyze.py  test_backtest_blend.py  test_backtest_engine.py  test_backtest_script.py  test_backtest_threshold_sweep.py  test_cage_auth_expiry.py  test_composite_signals.py  test_enrichment_retry_and_cache.py  test_report.py  test_returns_cache.py  test_returns_provider.py  test_sample_signals.py  test_signals.py  test_themes.py  test_transform.py  test_transform_ingestion.py  test_update_cage_cookies.py  test_validate_harness.py  test_yahoo_provider.py
(+5 files in other folders)
