[project]
name = "usaspending-contract-awards-pipeline"
version = "0.1.0"
description = "Streaming analysis pipeline for USAspending contract award data"
authors = [{ name = "Clawzilla" }]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "duckdb>=1.4.4",
    "matplotlib>=3.10.8",
    "requests>=2.32.5",
    "scipy>=1.17.1",
    "yfinance>=1.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests"]
